Fix volume slider overlaps

--- a/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
+++ b/chromium/.config/Chromium/Userstyles/youtube/src/youtube_player.styl
@@ -19,8 +19,10 @@ scrubber_height = 7px
 .ytp-volume-slider-handle
   &:before
     background accent !important
+    z-index -1
   &:after
     background highlight !important
+    z-index -1
 
 /* UI buttons */
 .ytp-playlist-menu-button-icon .ytp-svg-fill
